Fix background on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,7 +20,7 @@ body {
   background: url($background-image) no-repeat 100% 0 fixed;
   background-position: 50% 50%;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
   position: relative;
 }
 
